<resources>
    <string name="app_name">Payroc SDK Test App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Payroc Development</string>
    <string name="nav_header_subtitle">development@payroc.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="button_pay">Pay</string>
    <string name="card_cvv">CVV</string>
    <string name="cardZip">Zip</string>
    <string name="zero_dollars">$0.00</string>
    <string name="email_support">Email Support</string>
    <string name="call_support">Call Support</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="manual_pay">Manual Pay</string>
    <string name="emv_contactless">EMV / Contactless</string>
    <string name="devices">Devices</string>
    <string name="extras">Extras</string>
    <string name="tools">Tools</string>
    <string name="ingest_transaction">Ingest Transaction</string>
    <string name="multi_line_transaction">Multi Line Transaction</string>
    <string name="testAmount">5.10</string>
    <string name="testCard">4242424242424242</string>
    <string name="testExpDate">12/20</string>
    <string name="testCvv">123</string>
    <string name="testPostal">84041</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="no_devices_found">No devices found</string>
    <string name="available_devices">Available Devices</string>
    <string name="pair_new_device">Pair new device</string>
    <string name="pair_new_device_action">+ Pair New Device</string>
    <string name="no_bonded_devices_found">No bonded devices found</string>
    <string name="shared_prefs_key">DEMO_APP_SHARED_PREFS</string>
    <string name="not_found">Not found</string>
    <string name="device_status">Device Status</string>
    <string name="shared_prefs_device_name_key">active_device_name</string>
    <string name="shared_prefs_device_address_key">active_device_address</string>
    <string name="shared_prefs_device_type_key">active_device_type</string>
</resources>
