<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:id="@+id/txnAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/zero_dollars"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""/>
    <EditText
            android:id="@+id/cardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/card_number"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/txnAmount"
            app:layout_constraintStart_toStartOf="@+id/txnAmount"
            app:layout_constraintTop_toBottomOf="@+id/txnAmount"
            android:autofillHints=""/>

    <EditText
            android:id="@+id/expDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mm_yy"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/cvvNum"
            app:layout_constraintStart_toStartOf="@+id/cardNumber"
            app:layout_constraintTop_toTopOf="@+id/cvvNum"/>

    <EditText
            android:id="@+id/cvvNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/card_cvv"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/postal"
            app:layout_constraintStart_toEndOf="@+id/expDate"
            app:layout_constraintTop_toBottomOf="@+id/cardNumber"/>

    <EditText
            android:id="@+id/postal"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/cardZip"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/cardNumber"
            app:layout_constraintStart_toEndOf="@+id/cvvNum"
            app:layout_constraintTop_toTopOf="@+id/cvvNum"/>

    <Button
            android:text="@string/button_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitManualTxn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cvvNum"
            app:layout_constraintStart_toStartOf="@+id/expDate"
            app:layout_constraintEnd_toEndOf="@+id/postal"
    />

</android.support.constraint.ConstraintLayout>